--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -1,6 +1,6 @@
 {
   "name": "money-streaming",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "",
   "directories": {
     "test": "tests"
@@ -10,24 +10,15 @@
   },
   "dependencies": {
     "@project-serum/anchor": "^0.15.0",
-    "@project-serum/associated-token": "^0.1.1",
-    "@project-serum/common": "^0.0.1-beta.3",
-    "@project-serum/serum": "^0.13.58",
-    "@project-serum/sol-wallet-adapter": "^0.2.0",
-    "@project-serum/spl-token-swap": "^0.1.0-alpha.1",
-    "@project-serum/swap": "0.1.0-alpha.32",
-    "@project-serum/tokens": "^0.0.7",
     "@solana/spl-token-registry": "^0.2.235",
     "@solana/web3.js": "^1.25.0",
+    "@solana/spl-token": "^0.1.7",
     "bn.js": "^5.2.0",
     "borsh": "^0.6.0",
     "buffer": "^6.0.3",
     "buffer-layout": "^1.2.1",
     "dotenv": "10.0.0",
-    "esm": "^3.2.25",
     "eventemitter3": "^4.0.7",
-    "mz": "^2.7.0",
-    "prompt-sync": "4.2.0",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
@@ -39,7 +30,6 @@
     "@types/jest": "^26.0.15",
     "@types/ledgerhq__hw-transport": "^4.21.3",
     "@types/ledgerhq__hw-transport-webusb": "^4.70.1",
-    "@types/mz": "^2.7.2",
     "@types/node": "^15.6.1",
     "@types/prettier": "^2.1.5",
     "@types/yaml": "^1.9.7",
