--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "money-streaming",
+  "name": "@mean/money-streaming",
   "version": "1.2.12",
-  "description": "",
+  "description": "Typescript package to interact with the Money Streaming program",
   "directories": {
     "test": "tests"
   },
   "scripts": {
     "build": "tsc"
   },
+  "keywords": [
+    "mean-dao",
+    "mean-sdk",
+    "mean-protocol",
+    "money-streaming"
+  ],
   "dependencies": {
     "@project-serum/anchor": "^0.15.0",
     "@solana/spl-token-registry": "^0.2.235",
