--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
-  "name": "@mean/mean-protocol",
+  "name": "@mean-dao/mean-protocol",
   "version": "1.0.0",
   "description": "Typescript SDKs for the Mean Protocol",
-  "private": true,
   "workspaces": {
     "packages": [
-      "packages/ddca/*",
-      "packages/hybrid-liquidity-ag/*",
-      "packages/money-streaming/*"
+      "packages/**"
     ]
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
     "lerna": "^4.0.0",
-    "npm-run-all": "^4.1.5",
     "ts-node": "^9.1.1",
     "typescript": "^4.4.3"
   },
   "scripts": {
-    "build": "run-s clean && run-s build:all",
-    "build:all": "tsc -b ./packages/**/tsconfig.json",
+    "build": "tsc -b ./packages/**/tsconfig.json",
     "bootstrap": "lerna bootstrap",
     "clean": "lerna run --parallel clean",
     "release": "lerna publish"
