--- a/packages/hybrid-liquidity-ag/tsconfig.json
+++ b/packages/hybrid-liquidity-ag/tsconfig.json
@@ -2,6 +2,11 @@
     "extends": "@tsconfig/recommended/tsconfig.json",
     "compilerOptions": {
         "outDir": "./lib",
+        "rootDir": "./src",
+        "baseUrl": "./",
+        "paths": {
+            "@mean-dao/hybrid-liquidity-ag": ["../hybrid-liquidity-ag/src"]
+        },
         "declaration": true,
         "target": "es6",
         "lib": [
