--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mean/money-streaming",
-  "version": "1.2.12",
+  "name": "@mean-dao/money-streaming",
+  "version": "1.0.0",
   "description": "Typescript package to interact with the Money Streaming program",
   "directories": {
     "test": "tests"
@@ -15,10 +15,11 @@
     "money-streaming"
   ],
   "dependencies": {
+    "@mean-dao/ddca": "^1.0.0",
     "@project-serum/anchor": "^0.15.0",
+    "@solana/spl-token": "^0.1.7",
     "@solana/spl-token-registry": "^0.2.235",
     "@solana/web3.js": "^1.25.0",
-    "@solana/spl-token": "^0.1.7",
     "bn.js": "^5.2.0",
     "borsh": "^0.6.0",
     "buffer": "^6.0.3",
