--- a/packages/money-streaming/tsconfig.json
+++ b/packages/money-streaming/tsconfig.json
@@ -2,6 +2,11 @@
     "extends": "@tsconfig/recommended/tsconfig.json",
     "compilerOptions": {
         "outDir": "./lib",
+        "rootDir": "./src",
+        "baseUrl": "./",
+        "paths": {
+            "@mean-dao/money-streaming": ["../money-streaming/src"]
+        },
         "declaration": true,
         "target": "es6",
         "lib": [
