--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "packages/**"
     ]
   },
+  "private": false,
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
     "lerna": "^4.0.0",
