--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
-  "packages": ["packages/*"],
-  "version": "1.0.0",
+  "packages": [
+    "packages/*"
+  ],
+  "version": "2.0.1",
   "npmClient": "npm",
   "useWorkspaces": true,
   "command": {
