--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "money-streaming",
-  "version": "1.2.12",
+  "name": "@mean-dao/money-streaming",
+  "version": "1.3.0",
   "description": "",
-  "directories": {
-    "test": "tests"
-  },
-  "scripts": {
-    "build": "tsc"
+  "private": false,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mean-dao/mean-sdk.git"
   },
   "dependencies": {
     "@project-serum/anchor": "^0.15.0",
@@ -43,6 +42,15 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.4.2"
   },
+  "keywords": [
+    "mean-dao",
+    "mean-protocol",
+    "money-streaming"
+  ],
+  "bugs": {
+    "url": "https://github.com/mean-dao/mean-sdk/issues"
+  },
+  "homepage": "https://github.com/mean-dao/mean-sdk#readme",
   "type": "commonjs",
   "types": "lib/index.d.ts",
   "files": [
@@ -50,7 +58,9 @@
   ],
   "author": "",
   "license": "ISC",
-  "engines": {
-    "node": ">=12.x"
+  "scripts": {
+    "build": "tsc",
+    "clean": "rm -R ./lib",
+    "publish": "npm publish --access public"
   }
 }
