--- a/packages/ddca/package.json
+++ b/packages/ddca/package.json
@@ -17,19 +17,18 @@
   },
   "homepage": "https://github.com/mean-dao/mean-sdk#readme",
   "type": "commonjs",
-  "types": "lib/index.d.ts",
-  "files": [
-    "lib/*.*"
-  ],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@tsconfig/recommended": "^1.0.1",
+    "typescript": "^4.4.2"
+  },
+  "types": "./lib/index.d.ts",
+  "main": "./lib/index.js",
+  "files": ["./lib"],
   "scripts": {
     "build": "tsc",
     "clean": "rm -R ./lib",
     "publish": "npm publish --access public"
-  },
-  "devDependencies": {
-    "@tsconfig/recommended": "^1.0.1",
-    "typescript": "^4.4.2"
   }
 }
