--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/mean-protocol",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Typescript SDKs for the Mean Protocol",
   "private": false,
   "repository": {
@@ -16,19 +16,15 @@
     "url": "https://github.com/mean-dao/mean-sdk/issues"
   },
   "homepage": "https://github.com/mean-dao/mean-sdk#readme",
-  "devDependencies": {
-    "@tsconfig/recommended": "^1.0.1",
-    "typescript": "^4.4.2"
-  },
-  "include": [
-    "./ddca/lib",
-    "./hybrid-liquidity-ag/lib",
-    "./money-streaming/lib"
-  ],
-  "exclude": ["./packages"],
+  "files": [],
   "scripts": {
-    "build": "tsc -b ./packages/**/tsconfig.json && tsc -b",
-    "clean": "rm -R ./packages/**/lib && rm -R ./ddca ./hybrid-liquidity-ag ./money-streaming",
-    "publish": "npm publish --access public"
+    "build": "tsc -b ./packages/**/tsconfig.json",
+    "clean": "rm -R ./packages/**/lib",
+    "clean:win": "rmdir /s packages/**/lib",
+    "publish": "npm publish --access public",
+    "install:ddca": "cd ../../../ && npm i -S @mean-dao/ddca",
+    "install:hla": "cd ../../../ && npm i -S @mean-dao/hybrid-liquidity-ag",
+    "install:ms": "cd ../../../ && npm i -S @mean-dao/money-streaming",
+    "install": "run-p install:*"
   }
 }
