--- a/packages/ddca/package.json
+++ b/packages/ddca/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/ddca",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Typescript library to interact with the Decentralized DCA program",
   "private": false,
   "repository": {
@@ -23,9 +23,11 @@
     "@tsconfig/recommended": "^1.0.1",
     "typescript": "^4.4.2"
   },
-  "types": "./lib/index.d.ts",
-  "main": "./lib/index.js",
-  "files": ["./lib"],
+  "types": "lib/index.d.ts",
+  "main": "lib/index.js",
+  "files": [
+    "lib/*.*"
+  ],
   "scripts": {
     "build": "tsc",
     "clean": "rm -R ./lib",
