--- a/packages/ddca/tsconfig.json
+++ b/packages/ddca/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "@tsconfig/recommended/tsconfig.json",
     "compilerOptions": {
-        "outDir": "./lib",
+        "outDir": "lib",
         "declaration": true,
         "target": "es6",
         "lib": [
