Adding stream state to stream info on money-streaming JS API

--- a/packages/money-streaming/tsconfig.json
+++ b/packages/money-streaming/tsconfig.json
@@ -19,5 +19,6 @@
         "forceConsistentCasingInFileNames": true
     },
     "$schema": "https://json.schemastore.org/tsconfig",
-    "display": "Recommended"
+    "display": "Recommended",
+    "exclude": ["main.ts"]
   }
