--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/money-streaming",
-  "version": "1.3.6",
+  "version": "1.3.9",
   "description": "",
   "private": false,
   "repository": {
@@ -53,7 +53,6 @@
   "homepage": "https://github.com/mean-dao/mean-sdk#readme",
   "type": "commonjs",
   "types": "lib/index.d.ts",
-  "main": "lib/index.js",
   "files": [
     "lib/*.*"
   ],
@@ -62,6 +61,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -R ./lib",
-    "publish": "npm publish --access public"
+    "publish": "npm publish --access public",
+    "start": "ts-node main.ts"
   }
 }
