Update connexion parameters on money streaming

--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/money-streaming",
-  "version": "1.3.9",
+  "version": "1.4.3",
   "description": "",
   "private": false,
   "repository": {
@@ -61,7 +61,6 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -R ./lib",
-    "publish": "npm publish --access public",
-    "start": "ts-node main.ts"
+    "publish": "npm publish --access public"
   }
 }
