--- a/packages/ddca/package.json
+++ b/packages/ddca/package.json
@@ -19,6 +19,10 @@
   "type": "commonjs",
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@project-serum/anchor": "^0.17.0",
+    "@solana/spl-token": "^0.1.8"
+  },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
     "typescript": "^4.4.2"
