--- a/packages/ddca/tsconfig.json
+++ b/packages/ddca/tsconfig.json
@@ -16,8 +16,12 @@
         "sourceMap": false,
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true
     },
     "$schema": "https://json.schemastore.org/tsconfig",
-    "display": "Recommended"
+    "display": "Recommended",
+//     "include": [
+//       "src/idl.json"
+//    ]
 }
