--- a/packages/ddca/tsconfig.json
+++ b/packages/ddca/tsconfig.json
@@ -20,8 +20,5 @@
         "resolveJsonModule": true
     },
     "$schema": "https://json.schemastore.org/tsconfig",
-    "display": "Recommended",
-//     "include": [
-//       "src/idl.json"
-//    ]
+    "display": "Recommended"
 }
