--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/money-streaming",
-  "version": "1.4.9",
+  "version": "1.4.11",
   "description": "",
   "private": false,
   "repository": {
@@ -60,6 +60,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -R ./lib",
-    "publish": "npm publish --access public"
+    "publish": "npm publish --access public",
+    "start": "ts-node main.ts"
   }
 }
