--- a/packages/hybrid-liquidity-ag/package.json
+++ b/packages/hybrid-liquidity-ag/package.json
@@ -20,9 +20,37 @@
   "type": "commonjs",
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@mercurial-finance/stable-swap-n-pool": "git+https://github.com/mercurial-finance/stable-swap-n-pool-js.git",
+    "@orca-so/sdk": "^1.1.9",
+    "@project-serum/anchor": "^0.17.0",
+    "@project-serum/serum": "^0.13.60",
+    "@project-serum/sol-wallet-adapter": "^0.2.5",
+    "@project-serum/swap": "0.1.0-alpha.32",
+    "@project-serum/tokens": "^0.0.7",
+    "@saberhq/stableswap-sdk": "^1.3.17",
+    "@saberhq/token-utils": "^1.3.17",
+    "@solana/spl-token": "^0.1.8",
+    "@solana/spl-token-registry": "^0.2",
+    "@solana/spl-token-swap": "^0.1.0",
+    "@solana/wallet-adapter-base": "^0.7",
+    "@solana/web3.js": "^1.25.0",
+    "bignumber.js": "^9.0.1",
+    "bn.js": "^5.2.0",
+    "borsh": "^0.6.0",
+    "bs58": "^4.0.1",
+    "buffer": "6.0.3",
+    "buffer-layout": "^1.2.2",
+    "decimal.js": "^10.3.1",
+    "lodash-es": "^4.17.21"
+  },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
-    "typescript": "^4.4.2"
+    "@types/lodash-es": "^4.17.5",
+    "@types/bn.js": "^5.1.0",
+    "@types/bs58": "^4.0.1",
+    "typescript": "^4.4.2",
+    "ts-node": "^9.1.1"
   },
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
