--- a/packages/hybrid-liquidity-ag/package.json
+++ b/packages/hybrid-liquidity-ag/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/hybrid-liquidity-ag",
-  "version": "1.1.0",
+  "version": "1.1.3",
   "description": "Typescript library to interact with the Hybrid Liquidity Aggregator program",
   "private": false,
   "repository": {
@@ -55,7 +55,8 @@
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
   "files": [
-    "lib/*.*"
+    "lib/*.*",
+    "lib/**/*.*"
   ],
   "scripts": {
     "build": "tsc",
