--- a/packages/hybrid-liquidity-ag/package.json
+++ b/packages/hybrid-liquidity-ag/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/hybrid-liquidity-ag",
-  "version": "1.1.7",
+  "version": "1.1.9",
   "description": "Typescript library to interact with the Hybrid Liquidity Aggregator program",
   "private": false,
   "repository": {
@@ -28,13 +28,13 @@
     "@project-serum/sol-wallet-adapter": "^0.2.5",
     "@project-serum/swap": "0.1.0-alpha.32",
     "@project-serum/tokens": "^0.0.7",
-    "@saberhq/stableswap-sdk": "^1.3.17",
-    "@saberhq/token-utils": "^1.3.17",
+    "@saberhq/stableswap-sdk": "^1.6.2",
+    "@saberhq/token-utils": "^1.6.2",
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2",
     "@solana/spl-token-swap": "^0.1.0",
     "@solana/wallet-adapter-base": "^0.7",
-    "@solana/web3.js": "^1.25.0",
+    "@solana/web3.js": "^1.30",
     "bignumber.js": "^9.0.1",
     "bn.js": "^5.2.0",
     "borsh": "^0.6.0",
@@ -46,11 +46,11 @@
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
-    "@types/lodash-es": "^4.17.5",
     "@types/bn.js": "^5.1.0",
     "@types/bs58": "^4.0.1",
-    "typescript": "^4.4.2",
-    "ts-node": "^9.1.1"
+    "@types/lodash-es": "^4.17.5",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.4.2"
   },
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
@@ -60,7 +60,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "clean": "rm -R ./lib",
+    "clean": "rmdir /s lib",
     "publish": "npm publish --access public"
   }
 }
