--- a/packages/hybrid-liquidity-ag/package.json
+++ b/packages/hybrid-liquidity-ag/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/hybrid-liquidity-ag",
-  "version": "1.1.13",
+  "version": "1.1.15",
   "description": "Typescript library to interact with the Hybrid Liquidity Aggregator program",
   "private": false,
   "repository": {
@@ -41,8 +41,7 @@
     "bs58": "^4.0.1",
     "buffer": "6.0.3",
     "buffer-layout": "^1.2.2",
-    "decimal.js": "^10.3.1",
-    "lodash-es": "^4.17.21"
+    "decimal.js": "^10.3.1"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
