--- a/packages/hybrid-liquidity-ag/package.json
+++ b/packages/hybrid-liquidity-ag/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/hybrid-liquidity-ag",
-  "version": "1.1.18",
+  "version": "1.1.20",
   "description": "Typescript library to interact with the Hybrid Liquidity Aggregator program",
   "private": false,
   "repository": {
@@ -22,16 +22,16 @@
   "license": "ISC",
   "dependencies": {
     "@mercurial-finance/stable-swap-n-pool": "git+https://github.com/mercurial-finance/stable-swap-n-pool-js.git",
-    "@orca-so/sdk": "^1.1.9",
+    "@orca-so/sdk": "^1.1.13",
     "@project-serum/anchor": "^0.17.0",
     "@project-serum/serum": "^0.13.60",
     "@project-serum/sol-wallet-adapter": "^0.2.5",
     "@project-serum/tokens": "^0.0.7",
-    "@saberhq/stableswap-sdk": "^1.6.2",
-    "@saberhq/token-utils": "^1.6.2",
+    "@saberhq/stableswap-sdk": "^1.7.1",
+    "@saberhq/token-utils": "^1.7.1",
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2",
-    "@solana/spl-token-swap": "^0.1.0",
+    "@solana/spl-token-swap": "^0.1.2",
     "@solana/wallet-adapter-base": "^0.7",
     "@solana/web3.js": "^1.30",
     "bignumber.js": "^9.0.1",
@@ -40,7 +40,8 @@
     "bs58": "^4.0.1",
     "buffer": "6.0.3",
     "buffer-layout": "^1.2.2",
-    "decimal.js": "^10.3.1"
+    "decimal.js": "^10.3.1",
+    "jsbi": "^4.1.0"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
@@ -48,7 +49,7 @@
     "@types/bs58": "^4.0.1",
     "@types/lodash-es": "^4.17.5",
     "ts-node": "^9.1.1",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.4"
   },
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
