--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/money-streaming",
-  "version": "1.4.15",
+  "version": "1.5.0",
   "description": "",
   "private": false,
   "repository": {
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@project-serum/anchor": "^0.15.0",
+    "@solana/spl-token": "^0.1.7",
     "@solana/spl-token-registry": "^0.2.235",
     "@solana/web3.js": "^1.25.0",
-    "@solana/spl-token": "^0.1.7",
     "bn.js": "^5.2.0",
     "borsh": "^0.6.0",
     "buffer": "^6.0.3",
@@ -59,7 +59,7 @@
   "license": "ISC",
   "scripts": {
     "build": "tsc",
-    "clean": "rm -R ./lib",
+    "clean": "rmdir /s lib",
     "publish": "npm publish --access public"
   }
 }
