--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/money-streaming",
-  "version": "1.5.3",
+  "version": "1.5.4",
   "description": "",
   "private": false,
   "repository": {
@@ -56,7 +56,8 @@
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
   "files": [
-    "lib/*.*"
+    "lib/*.*",
+    "lib/**/*.*"
   ],
   "type": "commonjs",
   "author": "",
