--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -16,6 +16,8 @@
     "buffer": "^6.0.3",
     "buffer-layout": "^1.2.2",
     "dotenv": "10.0.0",
+    "moment": "^2.29.1",
+    "prompt-sync": "^4.2.0",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
@@ -59,6 +61,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rmdir /s lib",
-    "publish": "npm publish --access public"
+    "publish": "npm publish --access public",
+    "start": "ts-node main.ts"
   }
 }
