--- a/packages/msp/package.json
+++ b/packages/msp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/msp",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "MSP Typescript SDK",
   "private": false,
   "repository": {
@@ -11,7 +11,8 @@
     "@project-serum/anchor": "^0.19.0",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.31.0",
-    "bn.js": "^5.2.0"
+    "bn.js": "^5.2.0",
+    "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
