Adding logic to avoid create stream from treasurer as beneficiary on the MSP SDK. Fixing MSP v1 SDK get stream bug.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ packages/*/lib/**/*
 packages/*/node_modules
 packages/*/node_modules/**/*
 packages/money-streaming/main.ts
+packages/money-streaming/index.ts
