--- a/packages/money-streaming/tsconfig.json
+++ b/packages/money-streaming/tsconfig.json
@@ -21,5 +21,5 @@
     },
     "$schema": "https://json.schemastore.org/tsconfig",
     "display": "Recommended",
-    "exclude": ["main.ts"]
+    "exclude": ["main.ts", "index.ts"]
   }
