Updated MEAN mint and other minor fixes

--- a/packages/staking/tsconfig.json
+++ b/packages/staking/tsconfig.json
@@ -20,5 +20,6 @@
         "resolveJsonModule": true
     },
     "$schema": "https://json.schemastore.org/tsconfig",
-    "display": "Recommended"
+    "display": "Recommended",
+    "exclude": ["test_scripts/*"]
 }
