--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ packages/*/lib/**/*
 packages/*/node_modules
 packages/*/node_modules/**/*
 packages/money-streaming/main.ts
+packages/staking/test_scripts/*
