--- a/packages/staking/package.json
+++ b/packages/staking/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/staking",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Typescript library to interact with the Mean Stake program",
   "private": false,
   "repository": {
@@ -31,7 +31,8 @@
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
   "files": [
-    "lib/*.*"
+    "lib/*.*",
+    "lib/idl/*.*"
   ],
   "scripts": {
     "build": "tsc",
