--- a/packages/staking/package.json
+++ b/packages/staking/package.json
@@ -21,7 +21,8 @@
   "license": "ISC",
   "dependencies": {
     "@project-serum/anchor": "^0.22.1",
-    "@solana/spl-token": "^0.1.8"
+    "@solana/spl-token": "^0.1.8",
+    "cross-fetch": "^3.1.5"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
