--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ packages/*/node_modules/**/*
 packages/money-streaming/main.ts
 packages/money-streaming/index.ts
 packages/staking/test_scripts/*
+.DS_Store
