--- a/packages/msp/package.json
+++ b/packages/msp/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@types/bn.js": "^5.1.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.4.2"
   },
