Improving stream loading

--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/money-streaming",
-  "version": "1.7.10",
+  "version": "1.7.11-alpha.1",
   "description": "",
   "private": false,
   "repository": {
