--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -1,46 +1,40 @@
 {
   "name": "@mean-dao/money-streaming",
-  "version": "1.7.15",
-  "description": "",
+  "version": "1.8.0-alpha.1",
+  "description": "Typescript SDKs for the Money Streaming Protocol",
   "private": false,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mean-dao/mean-sdk.git"
+    "url": "git+https://github.com/mean-org/mean-sdk.git"
   },
   "dependencies": {
     "@project-serum/anchor": "^0.18.2",
     "@solana/spl-token": "^0.1.8",
-    "@solana/web3.js": "^1.30.2",
+    "@solana/web3.js": "^1.95.0",
     "bn.js": "^5.2.0",
-    "borsh": "^0.6.0",
+    "borsh": "2.0.0",
+    "bs58": "^6.0.0",
     "buffer": "^6.0.3",
     "buffer-layout": "^1.2.2",
-    "dotenv": "10.0.0",
-    "moment": "^2.29.1",
+    "dotenv": "16.4.5",
+    "moment": "^2.30",
     "prompt-sync": "^4.2.0",
-    "yaml": "^1.10.2"
+    "yaml": "^2.4.5"
   },
   "devDependencies": {
-    "@tsconfig/recommended": "^1.0.1",
+    "@tsconfig/recommended": "^1.0.7",
     "@types/bn.js": "^5.1.0",
     "@types/bs58": "^4.0.1",
-    "@types/eslint": "^7.2.4",
-    "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/jest": "^26.0.15",
-    "@types/ledgerhq__hw-transport": "^4.21.3",
-    "@types/ledgerhq__hw-transport-webusb": "^4.70.1",
-    "@types/node": "^15.6.1",
-    "@types/prettier": "^2.1.5",
-    "@types/yaml": "^1.9.7",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.2",
-    "start-server-and-test": "^1.11.6",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.4.2"
+    "@types/node": "^20.14.10",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.3.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.2.2"
   },
   "keywords": [
     "mean-dao",
@@ -48,9 +42,9 @@
     "money-streaming"
   ],
   "bugs": {
-    "url": "https://github.com/mean-dao/mean-sdk/issues"
+    "url": "https://github.com/mean-org/mean-sdk/issues"
   },
-  "homepage": "https://github.com/mean-dao/mean-sdk#readme",
+  "homepage": "https://github.com/mean-org/mean-sdk#readme",
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
   "files": [
@@ -60,8 +54,10 @@
   "license": "ISC",
   "scripts": {
     "build": "tsc",
-    "clean": "rmdir /s lib",
+    "watch": "./node_modules/.bin/tsc -w src/*.ts --noEmit --esModuleInterop",
+    "prebuild": "rm -rf lib",
     "publish": "npm publish --access public",
-    "start": "ts-node main.ts"
+    "start": "ts-node main.ts",
+    "prettier-format": "prettier --config .prettierrc.json 'src/**/*.ts' --write"
   }
 }
