Fine tune class export

--- a/packages/money-streaming/tsconfig.json
+++ b/packages/money-streaming/tsconfig.json
@@ -10,6 +10,7 @@
             "ES6"
         ],
         "declaration": true,
+        "useDefineForClassFields": true,
         "baseUrl": "./src",
         "allowJs": true,
         "sourceMap": true,
