--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/money-streaming",
-  "version": "1.8.0-alpha.5",
+  "version": "1.8.0-alpha.6",
   "description": "Typescript SDKs for the Money Streaming Protocol",
   "private": false,
   "repository": {
@@ -8,6 +8,7 @@
     "url": "git+https://github.com/mean-org/mean-sdk.git"
   },
   "dependencies": {
+    "@kayahr/text-encoding": "^1.3.0",
     "@project-serum/anchor": "^0.18.2",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.95.0",
