--- a/packages/money-streaming/package.json
+++ b/packages/money-streaming/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mean-dao/money-streaming",
-  "version": "1.8.0-alpha.6",
+  "version": "1.8.0",
   "description": "Typescript SDKs for the Money Streaming Protocol",
   "private": false,
   "repository": {
